# kgit-split

./: Cargo.toml
src/: fmt.rs  hash.rs  main.rs
