[package]
name = "kgit-split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bpaf = "0.4.4"
digest = "0.9.0"
itertools = "0.10.3"
log = "0.4.17"
meowhash = "0.3.0"
once_cell = "1.12.0"
parse-display = "0.5.5"
regex = "1.5.6"
termion = "1.5.6"
